<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_username" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:textColor="#FFFFFF"/>

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dialog_hint_username"
        android:inputType="textEmailAddress" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_password" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:textColor="#FFFFFF"/>

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dialog_hint_password"
        android:inputType="textPassword" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"/>

</LinearLayout>