<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:background="#E0E0E0">

        <Button
            android:id="@+id/btn_accounts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_account" />

        <ProgressBar
            android:id="@+id/timeline_progress"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/btn_new_status" />

        <Button
            android:id="@+id/btn_new_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/btn_refresh"
            android:text="@string/new_status" />

        <Button
            android:id="@+id/btn_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/btn_refresh" />

    </RelativeLayout>

    <ListView
        android:id="@+id/list_timeline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </ListView>

</LinearLayout>