<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E0E0E0" >

        <Button
            android:id="@+id/btn_send_accounts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_account" />

        <Button
            android:id="@+id/btn_add_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/btn_send_accounts"
            android:text="@string/add_pic" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/send_new_status"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="4dp"
            android:layout_toLeftOf="@+id/btn_send"
            android:orientation="horizontal" >

            <ProgressBar
                android:id="@+id/progress_new_status"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="5dp" />

            <TextView
                android:id="@+id/text_wordcount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="140" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/status_send" />
    </RelativeLayout>

    <EditText
        android:id="@+id/edit_status_text"
        android:layout_width="fill_parent"
        android:layout_height="180dp"
        android:layout_margin="4dp"
        android:ems="10"
        android:gravity="top" >

        <requestFocus />
    </EditText>

</LinearLayout>